# cursor-free

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/config/: default_email.toml  default_paths.toml
src/models/: cursor_account.rs  mod.rs
src/services/: cursor_service.rs  mod.rs
src/services/cursor/: data.rs  email.rs  machine.rs  mod.rs  tests.rs
src/utils/: color.rs  mod.rs  platform.rs
