[package]
name = "cursor-automation"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An elegant Cursor automation tool with SaaS capabilities"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11", features = ["auto-color"] }
log = "0.4"
dirs = "5.0"
toml = "0.8"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
lazy_static = "1.4"
